
Bug fixes:

* each: scoping bug fixed, thanks to Yasuhisa Yoshida for the bug report
* ninteraction now preserves NAs
* splitter_d: fixed ordering bug when .drop = FALSE
* list_to_dataframe is more consistent when processing a single data frame
* leaving .fun as NULL now always returns list (thanks to Stavros Macrakis for the bug report)


plyr 0.1.9 (2009-06-23) ---------------------------------------------------

* fix bug in rbind.fill when NULLs present in list
* improve each to recognise when all elements are numeric
* fix labelling bug in d*ply when .drop = FALSE
* additional methods for quoted objects
* add summarise helper - this function is like transform, but creates a new data frame rather than reusing the old (thanks to Brendan O'Connor for the neat idea)

plyr 0.1.8 (2009-04-20) ---------------------------------------------------

* made rbind a little faster (~20%) using an idea from Richard Raubertas
* daply now works correctly when splitting variables that contain empty factor levels

plyr 0.1.7 (2009-04-15) ---------------------------------------------------

Ensure that rbind.fill copies attributes.

plyr 0.1.6 (2009-04-15) ---------------------------------------------------

Improvements:

* all ply functions deal more elegantly when given function names: can supply a vector of function names, and name is used as label in output
* failwith and each now work with function names as well as functions (i.e. "nrow" instead of nrow)
* each now accepts a list of functions or a vector of function names
* l*ply will use list names where present
* if .inform is TRUE, error messages will give you information about where errors within your data - hopefully this will make problems easier to track down

Speed-ups

* massive speed ups for splitting large arrays
* fixed typo that was causing a 50% speed penalty for d*ply
* rewritten rbind.fill is considerably (> 4x) faster for many data frames
* colwise about twice as fast

Bug fixes:
