@@ -17,6 +17,7 @@ Bug fixes:
 * splitter_d: fixed ordering bug when .drop = FALSE
 * list_to_dataframe is more consistent when processing a single data frame
 * leaving .fun as NULL now always returns list (thanks to Stavros Macrakis for the bug report)
+* progress bars guaranteed to terminate even if **ply prematurely terminates
 
 
 plyr 0.1.9 (2009-06-23) ---------------------------------------------------
